# AeroAgriSwarm

./: COMMAND.md  README.md  TROUBLESHOOTING.md
src/crazyflie_missions/: LICENSE  package.xml  setup.cfg  setup.py
src/crazyflie_missions/config/: grid.yaml
src/crazyflie_missions/crazyflie_missions/agriswarm/: agent.py  agriswarm_node.py  behavior_planning.py  grid.py  grid_adapter.py  main.py  project2analysis.py  state_estimation.py  visualization.py
src/crazyflie_missions/crazyflie_missions/waypoint_tests/: crazyflie_bridge.py  crazyflie_bridge_lh.py  crazyflie_bridge_multi.py  takeoff.py  waypoint_manager.py  waypoint_manager_motive.py  waypoint_manager_multi.py
src/crazyflie_missions/launch/: agriswarm.launch.py
src/mocap_optitrack/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/mocap_optitrack/config/: mocap.yaml  mocap_view.rviz
src/mocap_optitrack/include/mocap_optitrack/: data_model.h  mocap_config.h  rigid_body_publisher.h  socket.h  version.h
src/mocap_optitrack/launch/: mocap.launch.py
src/mocap_optitrack/src/: CMakeLists.txt  data_model.cpp  mocap_config.cpp  mocap_node.cpp  rigid_body_publisher.cpp  socket.cpp  version.cpp
src/mocap_optitrack/src/natnet/: natnet_messages.cpp  natnet_messages.h  natnet_packet_definition.cpp  natnet_packet_definition.h
src/mocap_optitrack/urdf/: crazyflie_description_1.urdf  crazyflie_description_2.urdf  crazyflie_description_3.urdf
